@@ -1,5 +1,6 @@
 Changes for 1.8.3
 
+ - [ZBX-2767] fixed time stamp in german locales (Aly)
  - [ZBX-2759] fixed item form not saving params field (Vedmak)
  - [ZBX-2762] fixed sql error when "all" hosts is selected in application popup (Vedmak)
  - [ZBX-2757] fixed calendar colors in DO theme (Vedmak)
